# SlideGenie

./: .env.example  .gitignore  README.md  api_playground.html  main.py  mains2.py  pyproject.toml  slide_content_chain.py  slides.html  test.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  req.md  slide_code_test.html  slide_content_chain.py  slides.html
backend/generated_presentations/: .~lock.ae5be2ba-0cbe-4320-adf4-8d8766102b3a.pptx#  06a8a30a-ed8a-440b-b56b-72de7043443e.json  11859a3b-84cf-470c-888f-d82d576afc81.json  1ca7c4f5-2da9-4e7a-9f09-3014f618c3b5.json  47b7403b-eabc-4706-a40a-40864286e757.json  6054097f-853a-47ae-82d9-e44b13d538b9.json  63a122c5-3372-4d73-b44d-4b88bfc694ba.json  6cb5cc02-4330-4c8f-9b3c-65d146b0cf65.json  72d79a67-e82d-4317-8da6-bb541aef30ea.json  7ad4df6c-0631-45ed-997d-516ddacb3c50.json  7f81c947-feca-4e87-a439-bf24241d8c9b.json  93c7ebf9-24d8-43c6-b71e-607e66c76e39.json  9f7bd5e6-3067-4245-8cac-d87f89c08b5b.json  ae47fc0d-a8c0-4570-8c54-79a0ba5a6ae3.json  ae5be2ba-0cbe-4320-adf4-8d8766102b3a.json  ae5be2ba-0cbe-4320-adf4-8d8766102b3a.odp  ae5be2ba-0cbe-4320-adf4-8d8766102b3a.pptx  c1e5725f-fef8-45a0-b3b6-1cc89801fe55.json  dc37ce37-b70d-472d-a4ef-bffb9d55d98d.json  e3da0d74-162e-4b92-b3fe-0ddc51b8c611.json  f0c98eb7-3572-43a3-b999-b85f8967e766.json
backend/src/: index.html
backend/src/api/: helpers.py  main.py  mongo_db.py  schemas.py  theme_data.html
backend/src/chains/: edit_slide_code_chain.py  slides_data_chain.py  theme_chain.py
backend/src/helpers/: clean_text.py  html_to_pdf.py  test.py  theme_info.py  (+1 more)
(+116 files in other folders)
