[project]
name = "slide-ginie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "google-genai>=1.62.0",
    "langchain>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.7",
    "langsmith>=0.6.9",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "pillow>=12.1.0",
    "playwright>=1.58.0",
    "pypdf>=6.6.2",
    "python-pptx>=1.0.2",
    "rich>=14.3.2",
    "uvicorn>=0.41.0",
    "weasyprint>=68.1",
]
